# protocyte

./: .clang-format  .gitignore  .lldbinit  AGENTS.md  CMakeLists.txt  NOTICE  README.md  pyproject.toml
.github/: release.yml
.github/scripts/: install_protoc.py
.github/workflows/: ci.yml  protobuf-fallback.yml  release.yml
cmake/: Protocyte.cmake  ProtocyteFunctions.cmake  protocyteConfig.cmake.in  protocyteConfigVersionPrerelease.cmake.in
debugger/: README.md  protocyte_lldb.py
docs/: debugger.md
include/protocyte/runtime/: runtime.hpp
protocyte/: options.proto
smoke/: CMakeLists.txt  CMakePresets.json  README.md  example.proto
smoke/cmake/: FindWDK.cmake
smoke/proto/: compat.proto  cross_package.proto  example.proto
smoke/src/: host_benchmark.cpp  host_fixture.hpp  host_smoke.cpp  kernel_driver_smoke.cpp  protobuf_benchmark.cpp  protobuf_benchmark_fixture.hpp  protocyte_benchmark_fixture.hpp
smoke/tools/: generate_checked_outputs.py
src/protocyte/: _deterministic_math.py  cpp.py  descriptor_set.py  errors.py  extensions.py  main.py  model.py  parameters.py  plugin.py  runtime.py
src/protocyte/debugger/: __init__.py  protocyte_lldb.py
src/protocyte/proto/protocyte/: options.proto
src/protocyte/runtime/: __init__.py  runtime.hpp
src/runtime/: runtime.cpp
tests/: example.proto  test_cmake.py  test_debugger.py  test_descriptor_set.py  test_install_protoc.py  test_parameters.py  test_plugin.py  test_proto2_array_defaults.py  test_proto2_extensions.py  test_proto3_custom_option_extensions.py
tests/fetchcontent/: CMakeLists.txt
tests/fetchcontent/proto/: common.proto  demo.proto
tests/fetchcontent/src/: main.cpp
tests/find_package/: CMakeLists.txt
tests/find_package/proto/: common.proto  demo.proto
tests/find_package/src/: main.cpp
tests/hell/: rewrite_gate_source.js  run_ci.py
tests/hell/gate/: .hell.json  CMakeLists.txt
tests/hell/project/: .hell.json  CMakeLists.txt
tests/hell/project/proto/: common.proto  demo.proto
tests/hell/project/src/: main.cpp
tests/smoke/: .gitignore  .lldbinit  CMakeLists.txt  README.md  pyproject.toml
tests/smoke/cmake/: FindWDK.cmake
tests/smoke/proto/: benchmark.proto  compat.proto  example.proto  proto2_required.proto
tests/smoke/src/: benchmark_compat_smoke.cpp  benchmark_fixture.hpp  host_fixture.hpp  host_smoke.cpp  protobuf_benchmark_fixture.hpp
tests/smoke/tools/: generate_checked_outputs.py
