[project]
name = "protocyte"
dynamic = ["version"]
requires-python = ">=3.14"
dependencies = [
    "protobuf>=6.30.0",
]

[project.scripts]
protoc-gen-protocyte = "protocyte.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "protocyte.__version__"}

[tool.setuptools.package-data]
protocyte = ["proto/**/*.proto"]
"protocyte.runtime" = ["*.hpp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    ".git",
    ".venv",
    ".uv-cache",
    "build",
    "dist",
    "smoke/build",
    "smoke/cmake-build-debug",
]
